--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "kryten/module-suspend-store",
     "description": "N/A",
     "require": {
-        "php": "~7.1.0|~7.2.0|~7.3.0"
+        "php": "~7.1.0|~7.2.0|~7.3.0",
+        "magento/framework": "102.0.*"
     },
     "type": "magento2-module",
     "version": "1.0.0",
